// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main screen empty card should match snapshot 1`] = `
Object {
  "background": Array [
    Object {
      "color": "#31AD54",
      "type": "solid",
    },
  ],
  "border": Object {
    "corner_radius": 28,
  },
  "height": Object {
    "type": "match_parent",
    "weight": 1,
  },
  "id": "main_screen_card_0_0",
  "items": Array [
    Object {
      "font_size": 32,
      "font_weight": "medium",
      "line_height": 40,
      "text": "Рекомендуем",
      "text_color": "#80ffffff",
      "type": "text",
    },
    Object {
      "delimiter_style": Object {
        "color": "#0fff",
      },
      "height": Object {
        "type": "match_parent",
      },
      "type": "separator",
    },
    Object {
      "alignment_horizontal": "center",
      "border": Object {
        "corner_radius": 18,
      },
      "height": Object {
        "type": "fixed",
        "value": 220,
      },
      "image_url": "link_to_image",
      "type": "image",
      "width": Object {
        "type": "fixed",
        "value": 220,
      },
    },
    Object {
      "font_size": 32,
      "font_weight": "medium",
      "line_height": 40,
      "margins": Object {
        "top": 24,
      },
      "text": "Плейлист дня",
      "text_alignment_horizontal": "center",
      "text_color": "#fff",
      "type": "text",
    },
    Object {
      "font_size": 32,
      "font_weight": "medium",
      "line_height": 40,
      "margins": Object {
        "top": 4,
      },
      "text": "Обновлен сегодня",
      "text_alignment_horizontal": "center",
      "text_color": "#80ffffff",
      "type": "text",
    },
    Object {
      "delimiter_style": Object {
        "color": "#0fff",
      },
      "height": Object {
        "type": "match_parent",
      },
      "type": "separator",
    },
    Object {
      "alignment_horizontal": "center",
      "height": Object {
        "type": "fixed",
        "value": 79,
      },
      "image_url": "https://dialogs.s3.yandex.net/smart_displays/player/play.png?v=1",
      "margins": Object {
        "bottom": 8,
      },
      "type": "image",
      "width": Object {
        "type": "fixed",
        "value": 79,
      },
    },
  ],
  "paddings": Object {
    "bottom": 24,
    "left": 24,
    "right": 24,
    "top": 24,
  },
  "type": "container",
  "width": Object {
    "type": "match_parent",
    "weight": 1,
  },
}
`;

exports[`Main screen empty card should match snapshot with error 1`] = `
Object {
  "background": Array [
    Object {
      "color": "#1aeaf6ec",
      "type": "solid",
    },
  ],
  "border": Object {
    "corner_radius": 28,
  },
  "height": Object {
    "type": "match_parent",
    "weight": 1,
  },
  "id": "main_screen_card_0_0",
  "items": Array [
    Object {
      "font_size": 32,
      "font_weight": "medium",
      "line_height": 40,
      "text": "Музыка",
      "text_color": "#80ffffff",
      "type": "text",
    },
    Object {
      "delimiter_style": Object {
        "color": "#0fff",
      },
      "height": Object {
        "type": "match_parent",
        "weight": 2,
      },
      "type": "separator",
    },
    Object {
      "content_alignment_horizontal": "center",
      "items": Array [
        Object {
          "background": Array [
            Object {
              "color": "#1affffff",
              "type": "solid",
            },
          ],
          "border": Object {
            "corner_radius": 67,
          },
          "font_size": 48,
          "font_weight": "medium",
          "height": Object {
            "type": "fixed",
            "value": 135,
          },
          "line_height": 0,
          "text": "✕",
          "text_alignment_horizontal": "center",
          "text_alignment_vertical": "center",
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "fixed",
            "value": 135,
          },
        },
        Object {
          "font_size": 32,
          "font_weight": "medium",
          "line_height": 40,
          "margins": Object {
            "top": 24,
          },
          "text": "Что-то пошло не так",
          "text_alignment_horizontal": "center",
          "text_color": "#80ffffff",
          "type": "text",
        },
        Object {
          "font_size": 28,
          "font_weight": "medium",
          "line_height": 36,
          "margins": Object {
            "top": 8,
          },
          "text": "Проверьте интернет или обновите экран",
          "text_alignment_horizontal": "center",
          "text_color": "#80ffffff",
          "type": "text",
        },
      ],
      "type": "container",
    },
    Object {
      "delimiter_style": Object {
        "color": "#0fff",
      },
      "height": Object {
        "type": "match_parent",
        "weight": 3,
      },
      "type": "separator",
    },
  ],
  "paddings": Object {
    "bottom": 24,
    "left": 24,
    "right": 24,
    "top": 24,
  },
  "type": "container",
  "width": Object {
    "type": "match_parent",
    "weight": 1,
  },
}
`;
